trustfall_core/test_data/tests/parse_errors/filter_with_variable_string_instead_of_array_with_variable_string.graphql.ron
TestGraphQLQuery (
    // The `value` in a filter expects an array with a single string instead of
    // just a single value.
    //
    // This test explicitly checks this using a variable reference (a string prefixed
    // by a dollar sign).
    schema_name: "numbers",
    query: r#"
{
    Zero {
        value @filter(op: "=", value: "$zero")
    }
}"#,
    arguments: {
        "zero": Uint64(0)
    },
)
